rtest/tests/jsr335/Semantics/LambdaExpressions/InnerClasses/ShouldFail/syntax17/Test.java
// .result=COMPILE_FAIL
public class Test {			
	public static void main(String[] args) {
		int a = 10;
		class InnerClass {
			static {
		        a = 5;
		    }
		}

    }

}